[project]
name = "dwail-workspace"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = ["packages/agent", "packages/controller", "packages/shared"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "respx>=0.21",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
markers = [
    "workstation1: requires DWAIL_WS1_IP env var pointing at a live agent",
    "distributed: requires DWAIL_WS1_IP and DWAIL_WS2_IP env vars",
]
